# rain-stream

./: Cargo.toml  README.md
.github/workflows/: general.yaml
src/: TransactionsProcessor.rs  csv_reader.rs  domain.rs  main.rs  transaction_processor.rs  transactions_manager.rs  transactions_queue.rs
test_csv/: input_1.csv  input_100_000.csv  input_10_000.csv
test_output/: output_1.txt
tests/: csv_read.rs
tests/integration/: csv_reader.rs  e2e_functional.rs  helpers.rs  main.rs  performance.rs
