[package]
name = "rain-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3"
derive = "1.0.0"
features = "0.10.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_derive = "1.0.214"
thiserror = "1.0.66"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time", "sync"] }
